Thu Apr 14 08:37:11 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/Objref_TypeCode_Base.cpp:

	  Include "ace/OS_NS_string.h" to pull in ACE_OS::strcmp()
	  declaration.

Thu Apr 14 14:45:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableInterceptor.pidl:
          Moved ClientRequestInfo and ServerRequestInfo to their own files

        * tao/ClientRequestInfo.pidl:
        * tao/ServerRequestInfo.pidl:
        * tao/ClientRequestInfoA.cpp:
        * tao/ClientRequestInfoC.{h,cpp}:
        * tao/ClientRequestInfoS.h:
        * tao/ServerRequestInfoA.cpp:
        * tao/ServerRequestInfoC.{h,cpp}:
        * tao/ServerRequestInfoS.h:
          New files

        * tao/tao.mpc:
        * tao/Makefile.am:
          Added new files

        * tao/PortableInterceptorA.cpp:
        * tao/PortableInterceptorC.{h,cpp}:
          Regenerated

Thu Apr 14 14:05:12 UTC 2005  Justin Michel  <michel_j@ociweb.com>

	* tao/PortableServer/ServantRetentionStrategyNonRetain.cpp:

	  Fix warning about unused arg.

Thu Apr 14 07:57:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Objref_TypeCode_Base.h:
          Fixed fuzz error and correct doxygen class tag

Thu Apr 14 00:39:31 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/SystemException.cpp:

	  Reinstated preprocessor macro that caused concrete _tao_create()
	  methods to be instantiated.  It was accidentally removed in the
	  last batch of changes.  Fixes unresolved symbol errors.

Wed Apr 13 12:45:55 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/Alias_TypeCode.cpp:
	* tao/Alias_TypeCode.h:
	* tao/Alias_TypeCode.inl:
	* tao/Empty_Param_TypeCode.cpp:
	* tao/Empty_Param_TypeCode.h:
	* tao/Empty_Param_TypeCode.inl:
	* tao/Enum_TypeCode.cpp:
	* tao/Enum_TypeCode.h:
	* tao/Enum_TypeCode.inl:
	* tao/Fixed_TypeCode.cpp:
	* tao/Fixed_TypeCode.h:
	* tao/Fixed_TypeCode.inl:
	* tao/Sequence_TypeCode.cpp:
	* tao/Sequence_TypeCode.h:
	* tao/Sequence_TypeCode.inl: