@@ -1,3 +1,10 @@
+Thu Apr 14 10:42:08 2005  J.T. Conklin  <jtc@acorntoolworks.com>
+
+	* tao/Makefile.am:
+
+	  Regenerated.  Fixed alphabetization, plus picked up a few recent
+	  changes that hadn't been added by hand.
+
 Thu Apr 14 08:37:11 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>
 
 	* tao/Objref_TypeCode_Base.cpp:
